feat: login and logout functionality

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,8 @@
 {
   "dont_have_quotes": {
     "1": "This movie has no quotes"
-  }
+  },
+  "login": "Login",
+  "email": "Email",
+  "password": "Password"
 }
