--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -1,5 +1,8 @@
 {
   "dont_have_quotes": {
     "1": "ამ ფილმს ციტატა არ აქვს"
-  }
+  },
+  "login": "ავტორიზაცია",
+  "email": "ელ-ფოსტა",
+  "password": "პაროლი"
 }
