--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -4,5 +4,13 @@
   },
   "login": "ავტორიზაცია",
   "email": "ელ-ფოსტა",
-  "password": "პაროლი"
+  "password": "პაროლი",
+  "id": "იდ",
+  "name": "სახელი",
+  "created_date": "შექმნის თარიღი",
+  "actions": "მოქმედებები",
+  "catalog": "კატალოგი",
+  "create": "შექმნა",
+  "admin": "ადმინი",
+  "search_input": "ფილმის პოვნა / სერიალის..."
 }
